--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="three-container"></div>
-		<audio src="/resources/sound.mp3" loop preload="metadata"></audio>
+		<audio src="resources/sound.mp3" loop preload="metadata"></audio>
 		<div class="ui">
 			<input type="range" min="0" max="1" step="0.01" value="1" />
 			<a href="https://nemutas.github.io/sound-waves/" target="_blank" rel="noopener noreferrer">GitHub</a>
