--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<audio src="resources/sound.mp3" loop preload="metadata"></audio>
 		<div class="ui">
 			<input type="range" min="0" max="1" step="0.01" value="1" />
-			<a href="https://nemutas.github.io/sound-waves/" target="_blank" rel="noopener noreferrer">GitHub</a>
+			<a href="https://github.com/nemutas/sound-waves" target="_blank" rel="noopener noreferrer">GitHub</a>
 		</div>
 		<button class="play">
 			<p>This site plays sound.</p>
